# ScreenCatcher

./: .gitignore  LICENSE.txt  README.cn.md  README.md  ScreenCatcher.py  ScreenShot.py  pyproject.toml
.github/workflows/: build.yml
src/screencatcher/: ScreenCatcher.py  ScreenShot.py
